# RogueLike-maybe-

./: CMakeLists.txt  components.h  entity.h  functions.c  functions.h  functionsDraw.c  functionsGame.c  functionsMaps.c  functionsPlayer.c  gameFunctions.c  ideas.txt  intList.c  main.c  sharedData.h  smartStorage.c  toolFunctions.c  typeDefinitions.h
.cache/clangd/index/: components.h.342D7A282BFB43C1.idx  functions.c.DFC80D0EEF667224.idx  functions.h.53B0DCD40AD07558.idx  main.c.8D454EF284E4E512.idx  sharedData.h.093D1F8746455F44.idx  typeDefinitions.h.740BD21ED8D9E801.idx
